--- a/prepros-6.config
+++ b/prepros-6.config
@@ -2,10 +2,25 @@
   "name": "html",
   "firstRun": false,
   "exportConfig": true,
-  "fileConfigs": [],
+  "fileConfigs": [
+    {
+      "path": "sass/main.sass",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"}}"
+    },
+    {
+      "path": "sass/_banner.sass",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"}}"
+    },
+    {
+      "path": "sass/_var.sass",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true},\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"}}"
+    }
+  ],
   "fileTree": {
     "expandedDirs": [
-      "sass/bourbon"
+      "sass/bourbon",
+      "css",
+      "sass"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -28,6 +43,7 @@
         "sass/reset.scss",
         "sass/animate.scss",
         "sass/slick.scss",
+        "sass/owl.scss",
         "sass/_var.sass",
         "sass/_header.sass",
         "sass/_banner.sass",
@@ -245,7 +261,7 @@
     ],
     "history": []
   },
-  "file-type-sass": "{\"compilers\":[\"node-sass\",\"autoprefixer\",\"minify-css\"],\"sourceMap\":true}",
+  "file-type-sass": "{\"compilers\":[\"node-sass\",\"autoprefixer\",\"minify-css\"],\"sourceMap\":true,\"compiler-minify-css\":{\"enabled\":true}}",
   "file-type-less": "{\"compilers\":[\"less\",\"autoprefixer\",\"minify-css\"]}",
   "autoprefixer": {
     "browsers": "last 5 versions"
