--- a/prepros-6.config
+++ b/prepros-6.config
@@ -39,10 +39,10 @@
       "path": "sass/main.sass",
       "imports": [
         "sass/bourbon/_bourbon.scss",
+        "sass/font.scss",
         "sass/fontello.scss",
         "sass/reset.scss",
         "sass/animate.scss",
-        "sass/slick.scss",
         "sass/owl.scss",
         "sass/_var.sass",
         "sass/_header.sass",
